C/include/codata_constants_2014.h

ADD_IMPORT const int YEAR_2014;
ADD_IMPORT const struct codata_constant_type LATTICE_SPACING_OF_SILICON_2014;
ADD_IMPORT const struct codata_constant_type ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ALPHA_PARTICLE_MASS_2014;
ADD_IMPORT const struct codata_constant_type ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2014;
ADD_IMPORT const struct codata_constant_type ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2014;
ADD_IMPORT const struct codata_constant_type ALPHA_PARTICLE_MASS_IN_U_2014;
ADD_IMPORT const struct codata_constant_type ALPHA_PARTICLE_MOLAR_MASS_2014;
ADD_IMPORT const struct codata_constant_type ALPHA_PARTICLE_PROTON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type ANGSTROM_STAR_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_MASS_CONSTANT_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2014;
ADD_IMPORT const struct codata_constant_type ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2014;