src/codata_constants_2014_capi.f90

module codata__constants_2014_capi
!! Codata Constants - C API Autogenerated
use iso_c_binding, only: c_null_char, c_int
use codata__constants_2014
use codata__constants_type_capi
private

integer(c_int), protected, public, bind(C, name="YEAR_2014") :: capi_YEAR_2014 = YEAR_2014 !capi

type(capi_constant_type), protected, public, bind(C, name="LATTICE_SPACING_OF_SILICON_2014") ::&
capi_0_2014 = capi_constant_type([ &
"{", "2", "2", "0", "}", " ", "l", "a", "t", "t", &
"i", "c", "e", " ", "s", "p", "a", "c", "i", "n", &
"g", " ", "o", "f", " ", "s", "i", "l", "i", "c", &
"o", "n", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
LATTICE_SPACING_OF_SILICON_2014%value, &
LATTICE_SPACING_OF_SILICON_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2014") ::&
capi_1_2014 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", "-", "e", "l", "e", "c", "t", &
"r", "o", "n", " ", "m", "a", "s", "s", " ", "r", &
"a", "t", "i", "o", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2014%value, &
ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS_2014") ::&
capi_2_2014 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS_2014%value, &
ALPHA_PARTICLE_MASS_2014%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2014") ::&
capi_3_2014 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", " ", &
"e", "n", "e", "r", "g", "y", " ", "e", "q", "u", &
"i", "v", "a", "l", "e", "n", "t", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2014%value, &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2014%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2014") ::&
capi_4_2014 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", " ", &
"e", "n", "e", "r", "g", "y", " ", "e", "q", "u", &
"i", "v", "a", "l", "e", "n", "t", " ", "i", "n", &
" ", "M", "e", "V", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2014%value, &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2014%uncertainty, &
[ &
"M", "e", "V", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS_IN_U_2014") ::&
capi_5_2014 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", " ", &
"i", "n", " ", "u", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS_IN_U_2014%value, &
ALPHA_PARTICLE_MASS_IN_U_2014%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MOLAR_MASS_2014") ::&
capi_6_2014 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "o", "l", "a", "r", &
" ", "m", "a", "s", "s", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MOLAR_MASS_2014%value, &
ALPHA_PARTICLE_MOLAR_MASS_2014%uncertainty, &
[ &
"k", "g", " ", "m", "o", "l", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_PROTON_MASS_RATIO_2014") ::&
capi_7_2014 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", "-", "p", "r", "o", "t", "o", &
"n", " ", "m", "a", "s", "s", " ", "r", "a", "t", &
"i", "o", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_PROTON_MASS_RATIO_2014%value, &
ALPHA_PARTICLE_PROTON_MASS_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ANGSTROM_STAR_2014") ::&
capi_8_2014 = capi_constant_type([ &
"A", "n", "g", "s", "t", "r", "o", "m", " ", "s", &
"t", "a", "r", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ANGSTROM_STAR_2014%value, &
ANGSTROM_STAR_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_CONSTANT_2014") ::&
capi_9_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_CONSTANT_2014%value, &
ATOMIC_MASS_CONSTANT_2014%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2014") ::&
capi_10_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
" ", "e", "n", "e", "r", "g", "y", " ", "e", "q", &
"u", "i", "v", "a", "l", "e", "n", "t", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2014%value, &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2014%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2014") ::&
capi_11_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
" ", "e", "n", "e", "r", "g", "y", " ", "e", "q", &
"u", "i", "v", "a", "l", "e", "n", "t", " ", "i", &
"n", " ", "M", "e", "V", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2014%value, &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2014%uncertainty, &
[ &
"M", "e", "V", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2014") ::&
capi_12_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "e", "l", "e", &
"c", "t", "r", "o", "n", " ", "v", "o", "l", "t", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2014%value, &
ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2014%uncertainty, &
[ &
"e", "V", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2014") ::&
capi_13_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "h", "a", "r", &
"t", "r", "e", "e", " ", "r", "e", "l", "a", "t", &
"i", "o", "n", "s", "h", "i", "p", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2014%value, &
ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2014%uncertainty, &
[ &
"E", "_", "h", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2014") ::&
capi_14_2014 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "h", "e", "r", &
"t", "z", " ", "r", "e", "l", "a", "t", "i", "o", &
"n", "s", "h", "i", "p", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2014%value, &
ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2014%uncertainty, &
[ &
"H", "z", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
